fix overflow issue caused by overflowing imagery, attempt 2

--- a/src/pages/styles.global.scss
+++ b/src/pages/styles.global.scss
@@ -30,7 +30,12 @@ h1 {
 }
 
 .psyoptions {
+  bottom: 0;
+  left: 0;
   overflow-x: hidden;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .p-button {
